<resources>
    <string name="app_name">My Tickets</string>

    <!-- DRAWER MENU -->
    <string name="DRAWER_OPTION_TICKETS">Tickets</string>
    <string name="DRAWER_OPTION_CATEGORIES">Categorías</string>
    <string name="DRAWER_OPTION_MAP">Localizar tickets</string>

    <!-- TICKET TAB CONTAINER -->
    <string name="TITLE_TICKET_TAB_CONTAINER">Mis tickets (%1$d)</string>
    <string name="TAB_LIST_TITLE">Lista</string>
    <string name="TAB_TILES_TITLE">Mosaico</string>
    <string name="TAB_CARDS_TITLE">Tarjetas</string>

    <!-- TICKET FIELDS -->
    <string name="TICKET_TITLE">Título del ticket</string>
    <string name="TICKET_DESC">Descripción del ticket</string>
    <string name="TICKET_PRICE">%1$.2f €</string>

    <!-- CATEGORY CONTAINER -->
    <string name="TITLE_CATEGORY_CONTAINER">Mis categorías (%1$d)</string>

    <!-- CATEGORY FIELDS -->
    <string name="CATEGORY_TITLE">Título de la categoría</string>
    <string name="DEFAULT_CATEGORY_TITLE">Sin categoría</string>
    <string name="DEFAULT_CATEGORY_DESCRIPTION">Categoría por defecto, asignada a los tickets que no tienen categoría.</string>
    <string name="DEFAULT_CATEGORY_DETAILS">Puedes editar esta categoría si así lo deseas.</string>

    <!-- ADD & EDIT TICKET -->
    <string name="TITLE_ADD_TICKET">Nuevo ticket</string>
    <string name="TITLE_EDIT_TICKET">Editar ticket</string>
    <string name="LBL_TICKET_CATEGORY">Categoría</string>
    <string name="LBL_TICKET_PRICE">Precio</string>
    <string name="LBL_TICKET_DESC">Descripción</string>
    <string name="LBL_TICKET_TITLE">Título</string>
    <string name="BTN_NEW_TICKET">Crear ticket</string>
    <string name="BTN_EDIT_TICKET">Editar ticket</string>
    <string name="BTN_APPLY_OCR">Auto-rellenar descripción</string>
    <string name="FAB_ADD_EDIT_TICKET_GALLERY">Galería</string>
    <string name="FAB_ADD_EDIT_TICKET_CAMERA">Cámara</string>
    <string name="LPRESS_DELETE_OPT">Eliminar</string>

    <!-- ADD & EDIT CATEGORY -->
    <string name="TITLE_ADD_CATEGORY">Nueva categoría</string>
    <string name="TITLE_EDIT_CATEGORY">Editar categoría</string>
    <string name="LBL_CATEGORY_TITLE">Título</string>
    <string name="LBL_CATEGORY_DESC">Descripción</string>
    <string name="LBL_CATEGORY_DETAILS">Detalles</string>
    <string name="BTN_NEW_CATEGORY">Crear categoría</string>
    <string name="BTN_EDIT_CATEGORY">Editar categoría</string>
    <string name="FAB_ADD_EDIT_CATEGORY_GALLERY">Galería</string>
    <string name="FAB_ADD_EDIT_CATEGORY_CAMERA">Cámara</string>

    <!-- TICKET LOCATIONS -->
    <string name="TITLE_TICKET_LOCATIONS">%1$d localizaciones</string>

    <!-- MESSAGES -->
    <string name="MSG_START_NO_TICKETS_FOUND">Tu lista de tickets está vacía.</string>
    <string name="MSG_START_NO_CATEGORIES_FOUND">Tu lista de categorías está vacía.</string>
    <string name="MSG_EMPTY_FIELDS">Rellena todos los campos para continuar.</string>
    <string name="MSG_TICKET_DELETE_CONFIRM">¿Estás seguro/a de que quieres borrar el ticket?</string>
    <string name="MSG_DELETED_TICKET">El ticket \'%s\' ha sido eliminado.</string>
    <string name="MSG_CATEGORY_DELETE_CONFIRM">¿Estás seguro/a de que quieres borrar la categoría?</string>
    <string name="MSG_DELETED_CATEGORY">La categoría \'%s\' ha sido eliminada.</string>
    <string name="MSG_LAST_CATEGORY_DELETE_ERROR">No puedes eliminar la última categoría.</string>
    <string name="MSG_GALLERY_RAT">La app necesita acceso a tu Galería para poder seleccionar una imagen para los tickets o para las categorías.</string>
    <string name="MSG_CAMERA_RAT">La app necesita acceso a la cámara para poder obtener una foto para los tickets o para las categorías.</string>
    <string name="MSG_LOCATION_RAT">La app necesita acceso a tu ubicación actual para poder guardar la localización donde se creó el ticket.</string>
    <string name="MSG_IMG_PICK_ERROR">Ha habido un error al procesar la imagen.</string>
    <string name="MSG_OCR_NO_TEXT_FOUND">No se ha reconocido texto en la imagen seleccionada.</string>
    <string name="MSG_OCR_NO_IMG_SELECTED">Debes añadir una imagen al ticket para poder usar esta opción.</string>
    <string name="MSG_OCR_TEXT_FOUND">Se ha encontrado texto en la imagen.</string>
    <string name="MSG_LOCATION_ERROR">No se ha podido obtener la dirección.</string>

    <!-- API -->
    <string name="GMAPS_API_KEY">AIzaSyACB4HcrcWeWaVdMDZRKd9RtJnqgwU34x8</string>
    <string name="GEOCODING_API_KEY">AIzaSyAllfK-ZekF8XFsiXC1L4tafHwWIrr_H-A</string>
    <string name="GEOCODING_HTTP_REQUEST_URL">https://maps.googleapis.com/maps/api/geocode/json?latlng=%1$s,%2$s&amp;key=%3$s</string>
    <string name="MSG_EMPTY_TITLE">Debes introducir un título</string>
    <string name="MSG_EMPTY_DESC">Debes introducir una descripción</string>
    <string name="MSG_EMPTY_PRICE">Debes introducir un precio</string>
    <string name="DEV_NAME">Miguel Ángel Vicente Baeza</string>
    <string name="DEV_MAIL">miguel.vicente@goumh.umh.es</string>
    <string name="MSG_SEARCHING_LOC">Buscando tu localización...</string>
</resources>


