<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivImg"
        android:layout_width="107.3dp"
        android:layout_height="107.3dp"
        android:scaleType="centerCrop"
        android:src="@drawable/card_placeholder"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TICKET_TITLE"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TICKET_DESC"
            android:maxLines="1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/TICKET_PRICE"
            android:textSize="18sp"
            android:textColor="?colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>