<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="es.dadm.practica2.Screens.AddEditTicket">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_height="192dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/ivImg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/card_placeholder"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="64dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="32dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/LBL_TICKET_TITLE"
                    app:met_floatingLabelAlwaysShown="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/LBL_TICKET_DESC"
                    app:met_floatingLabelAlwaysShown="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelText="@string/LBL_TICKET_PRICE"
                    android:inputType="numberDecimal"
                    app:met_floatingLabelAlwaysShown="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16sp"
                    android:text="@string/LBL_TICKET_CATEGORY"
                    android:textSize="11sp"/>

                <Spinner
                    android:id="@+id/spCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:entries="@array/size_entries" />

                <LinearLayout
                    android:id="@+id/llLocationContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/mapTicketLocation"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="16dp" />

                    <TextView
                        android:id="@+id/tvFormattedAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCreateEditTicket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/BTN_NEW_TICKET"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    style="@style/Widget.AppCompat.Button.Colored"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fabActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="end"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:fab_addButtonColorNormal="?attr/colorAccent"
        app:fab_addButtonColorPressed="@color/white_pressed"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_addButtonSize="normal"
        app:fab_expandDirection="down"
        app:fab_labelStyle="@style/menu_labels_style"
        app:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPhotoFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mlight_accent_light"
            app:fab_size="normal"
            app:fab_title="@string/FAB_ADD_EDIT_TICKET_GALLERY"
            app:fab_colorPressed="@color/white_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPhotoFromCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/mlight_accent_light"
            app:fab_size="normal"
            app:fab_title="@string/FAB_ADD_EDIT_TICKET_CAMERA"
            app:fab_colorPressed="@color/white_pressed"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>